[metadata]
name = Resamper
version = attr: resampler.__version__
author = Ryan Sanchez
author_email = ryan.sanchez@gofactr.com
description = 
    Interpolation module for resampling 1-D and 2-D arrays. Uses numba to
    increase throughput. 
keywords = cubic spline, interpolation, OMOMS
license = MIT license


[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    numba
    
